Fix error "Prefer java.nio.file.Path.of(java.lang.String,java.lang.String...)" Update "getWindowPath()" method in "org.springframework.context.support.AivisSpeechRestApiJPanelTest" class Use "java.nio.file.Path.of(java.lang.String,java.lang.String...)" method to replace usage of "java.nio.file.Paths.get(java.lang.String,java.lang.String...)" method